welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: class Array takes type parameters
def getMotif():Array={
               ^Array1:8: error: class Array takes type parameters
def getMotif():Array={
               ^